# vidcodec

./: Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yaml
examples/: round-trip.rs
src/: lib.rs
tests/: registry.rs
vaapi-sys/: Cargo.toml  README.md  build.rs  wrapper.h
vaapi-sys/src/: lib.rs
vidcodec-bitstream/: Cargo.toml
vidcodec-bitstream/src/: h264.rs  lib.rs
vidcodec-core/: Cargo.toml
vidcodec-core/src/: backend.rs  bitstream.rs  capability.rs  codec.rs  decoder.rs  encoder.rs  error.rs  frame.rs  lib.rs  pixel.rs  probe.rs  registry.rs
vidcodec-mediacodec/: Cargo.toml  README.md
vidcodec-mediacodec/src/: backend.rs  error.rs  ffi.rs  lib.rs  pixel.rs  probe.rs  profile.rs
vidcodec-mediacodec/src/h264/: decode.rs  encode.rs  mod.rs
vidcodec-mediacodec/tests/: probe.rs  roundtrip.rs
vidcodec-mf/: Cargo.toml  README.md
vidcodec-mf/src/: backend.rs  com.rs  error.rs  lib.rs  media_type.rs  mft.rs  pixel.rs  probe.rs  profile.rs  sample.rs
vidcodec-mf/src/h264/: decode.rs  encode.rs  mod.rs
vidcodec-mf/tests/: probe.rs  roundtrip.rs
vidcodec-nvenc/: Cargo.toml  README.md  build.rs
vidcodec-nvenc/examples/: enumerate.rs
vidcodec-nvenc/src/: backend.rs  device.rs  error.rs  frame.rs  lib.rs  probe.rs  profile.rs
vidcodec-nvenc/src/h264/: decode.rs  encode.rs  mod.rs
vidcodec-nvenc/src/nvdec/: mod.rs  parser.rs
vidcodec-nvenc/tests/: probe.rs  roundtrip.rs
vidcodec-probe/: Cargo.toml
vidcodec-probe/src/: main.rs
vidcodec-util/: Cargo.toml
vidcodec-util/src/: lib.rs  pixel.rs  profile.rs
vidcodec-vaapi/: Cargo.toml  README.md
vidcodec-vaapi/src/: backend.rs  buffer.rs  context.rs  display.rs  error.rs  lib.rs  probe.rs  profile.rs  surface.rs
vidcodec-vaapi/src/h264/: decode.rs  dpb.rs  encode.rs  iq_matrix.rs  mod.rs  picture.rs
vidcodec-vaapi/tests/: probe.rs  roundtrip.rs
vidcodec-videotoolbox/: Cargo.toml  README.md
vidcodec-videotoolbox/src/: backend.rs  encode_opts.rs  error.rs  ffi.rs  lib.rs  pixel.rs  probe.rs  profile.rs
vidcodec-videotoolbox/src/h264/: decode.rs  encode.rs  mod.rs
vidcodec-videotoolbox/tests/: probe.rs  roundtrip.rs
