[package]
name = "vaapi-sys"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Low-level bindgen FFI bindings to libva (VA-API)"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vaapi", "libva", "video", "hardware", "ffi"]
categories = ["external-ffi-bindings", "multimedia"]
links = "va"

[features]
default = ["drm", "wayland", "x11"]
drm = []
x11 = []
wayland = []

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"

[lints.rust]
non_upper_case_globals = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
improper_ctypes = "allow"
dead_code = "allow"
unused_qualifications = "allow"
unsafe_op_in_unsafe_fn = "allow"

[lints.clippy]
undocumented_unsafe_blocks = "allow"
