[package]
name = "vidcodec-mediacodec"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Android MediaCodec hardware backend for vidcodec"
readme = "README.md"
license = "Apache-2.0"
keywords = ["mediacodec", "android", "video", "hardware", "h264"]
categories = ["multimedia", "api-bindings"]

[dependencies]
bytes = "1.10"
vidcodec-core = { path = "../vidcodec-core" }
vidcodec-bitstream = { path = "../vidcodec-bitstream" }
vidcodec-util = { path = "../vidcodec-util" }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9", features = ["media", "api-level-26"] }

[dev-dependencies]
serial_test = "3"

[lints.rust]
missing_docs = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unreachable_pub = "deny"

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
undocumented_unsafe_blocks = "deny"
