[package]
name = "vidcodec-probe"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Probe CLI for vidcodec backends (VA-API, NVENC, …)"
license = "Apache-2.0"
publish = false

[dependencies]
vidcodec = { path = ".." }

[features]
default = []
nvenc = ["vidcodec/nvenc"]

[lints.rust]
missing_docs = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unreachable_pub = "deny"

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
undocumented_unsafe_blocks = "deny"
